# dhbw-github-crawler

./: Cargo.toml  repos.dhbw
.github/workflows/: rust.yml
src/: main.rs
