[package]
name = "dhbwghc"
version = "0.1.0"
authors = ["Marvin König <dev@mkqavi.com>"]
description = "A simple crawler which clones specified repositories"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
url = "2.1.0"
